# OmkarSawantBTP_SLAM_Photogrammetry

./: .gitignore  20ce02027_BTP_Report.docx  README.md  ~$ce02027_BTP_Report.docx
Books and Reads/: IntroductionToProject.docx  README.md
Books and Reads/Report ScreenShots/: CPU Speed Test  GPU Speed Test  IIT BridgePointCloud  PointCloudIIT Bridge  disparityMap  disparityPointCloud
Nvidia_CUDA/: vectorOperations  vectorOperations.cu
Nvidia_CUDA/test/: CMakeLists.txt  output  test.cu  threadsBlocksGrids.cu
OpenCV_CPP/Photogrammetry_OpenCV_CPP/PhotogrammetrySIFT/: CMakeLists.txt  PhotogrammetrySIFT.cpp
OpenCV_CPP/Photogrammetry_OpenCV_CPP/cameraCalibration/: CMakeLists.txt  CameraCalibration.cpp  CameraCalinration.cpp
OpenCV_CPP/Photogrammetry_OpenCV_CPP/cudaFeatureExtractionTest/: '  CMakeLists.txt  CudaFeatureExtractionTest.cpp
OpenCV_CPP/Photogrammetry_OpenCV_CPP/cudaFeatureExtractionTest/.cache/clangd/index/: CudaFeatureExtractionTest.cpp.04BDC40AE7219860.idx
OpenCV_CPP/Photogrammetry_OpenCV_CPP/disparityMapTest/: CMakeLists.txt  DisparityMapTest.cpp
OpenCV_CPP/Photogrammetry_OpenCV_CPP/faceDetectionTest/: FaceDetection.cpp  compile_commands.json
OpenCV_CPP/Photogrammetry_OpenCV_CPP/faceDetectionTest/.cache/clangd/index/: DisplayImage.cpp.9C3E8C3A1331A9CE.idx  FaceDetection.cpp.07C9CE98BBD926A4.idx  FaceDetection.cpp.3104358F3F20E15B.idx
OpenCV_CPP/Photogrammetry_OpenCV_CPP/featureExtractionTest/: CMakeLists.txt  FeatureExtraction.cpp
OpenCV_CPP/Photogrammetry_OpenCV_CPP/featureExtractionTest/.cache/clangd/index/: FeatureExtraction.cpp.B1704FDBECE02955.idx
OpenCV_CPP/Photogrammetry_OpenCV_CPP/featureMatching/: CMakeLists.txt  FeatureMatching.cpp
OpenCV_CPP/Photogrammetry_OpenCV_CPP/featureMatching/.cache/clangd/index/: FeatureMatching.cpp.941375EBD5D89D9F.idx
OpenCV_CPP/Photogrammetry_OpenCV_CPP/frameTriangulationTest/: .clang-format  3  CMakeLists.txt  FrameTriangulationTest.cpp  \  test.cpp
OpenCV_CPP/Photogrammetry_OpenCV_CPP/nvidiaCudaTest/: CMakeLists.txt  NvidiaCudaTest.cpp  test
OpenCV_CPP/Photogrammetry_OpenCV_CPP/pointCloudVisualization/: CMakeLists.txt  OnlineCode.cpp  PointCloudVisualization.cpp
OpenCV_CPP/Photogrammetry_OpenCV_CPP/stereoCameraCalibration/: CMakeLists.txt  StereoCameraCalibration.cpp  extrinsics.yml  intrinsics.yml
OpenCV_CPP/Photogrammetry_OpenCV_CPP/stereoCameraCalibration/src/: stereo_calib.xml
OpenCV_CPP/Photogrammetry_OpenCV_CPP/stereoCameraCalibration/src0/: stereo_calib.xml
OpenCV_CPP/Photogrammetry_OpenCV_CPP/stereoCameraCalibration/src1/: stereo_calib.xml
OpenCV_CPP/Photogrammetry_OpenCV_CPP/test/: CMakeCache.txt  DisplayImage.cpp  Makefile  cmake_install.cmake
OpenCV_CPP/Photogrammetry_OpenCV_CPP/videoFeatureMatching/: CMakeLists.txt  VideoFeatureMatching.cpp
OpenCV_CPP/test/: CMakeLists.txt  DisplayImage  FaceDetection.cpp  compile_commands.json
